--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ dependencies {
     // lombok
     implementation 'org.projectlombok:lombok:1.18.16'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    // DB, JPA
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.1.Final'
 }
 
 test {
